discussion/kv_engine/181923/181923_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

No need for locking for AuditConfig

All usage is from the same thread

Change-Id: I80a846c9b3f4bb3359ad8f2f8f748ceacc1adcf4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-27 06:55:08.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 07:43:39.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23552/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23552/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23961/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23961/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31977/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31977/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24793/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24793/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11340/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11340/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11249/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11249/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/251/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/251/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21519/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    event_filter.withWLock([&rewrittenEventFilterJson](auto& filter) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:155:16: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
             (*event_filter.rlock())->to_json().dump());
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:293:14: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    return (*event_filter.rlock())->clone();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:119:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::unique_ptr<AuditEventFilter>> event_filter;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21519/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5:
error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21519/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50739/ : FAILURE

Failure of GoogleTest "Persistent/STParamPersistentBucketTest.backfill_expiry_output/persistent_magma_full_eviction":

<pre>
[ RUN      ] Persistent/STParamPersistentBucketTest.backfill_expiry_output/persistent_magma_full_eviction
2022-10-27T00:31:36.282761-07:00 CRITICAL (SynchronousEPEngine:default) MagmaKVStore Magma open failed. Status:IOError: Unable to open file ep_engine_ep_unit_tests.db/test.130201/magma.0/config.json.tmp: The system cannot find the path specified.
unknown file: error: C++ exception with description "MagmaKVStore Magma open failed. Status:IOError: Unable to open file ep_engine_ep_unit_tests.db/test.130201/magma.0/config.json.tmp: The system cannot find the path specified." thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] Persistent/STParamPersistentBucketTest.backfill_expiry_output/persistent_magma_full_eviction, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=full_eviction" (15 ms)
Persistent/STParamPersistentBucketTest.backfill_expiry_output/persistent_magma_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50739/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22981/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22981/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20787/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
